--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "horde/imap_client": "dev-master",
         "horde/mail": "dev-master",
         "horde/smtp": "dev-master",
-        "pear-pear.php.net/Net_DNS2": "^1.3",
+        "pear/net_dns2": "^1.5",
         "ext-SimpleXML": "*"
     },
     "suggest": {},
